[package]
name = "nono-cli"
version = "0.12.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CLI for nono capability-based sandbox"
readme = "README.md"
keywords = ["sandbox", "security", "cli", "landlock", "seatbelt"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "nono"
path = "src/main.rs"

[dependencies]
nono = { version = "0.12.0", path = "../nono" }
nono-proxy = { version = "0.12.0", path = "../nono-proxy" }
clap = { version = "4", features = ["derive", "env"] }
colored = "3"
similar = "2"
rand = "0.10"
which = "8"
toml = "1.0"
xdg-home = "1.3.0"
dirs = "6"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }

# Signing key PKCS#8 serialization (already transitive via sigstore-verify)
aws-lc-rs = "1"

# Keystore access for trust signing keys
keyring = "3"

# Keyless (Sigstore/Fulcio/Rekor) signing for instruction file attestation
sigstore-sign = "0.6"
tokio = { version = "1", features = ["rt"] }

ureq = "3"

zeroize.workspace = true
sha2.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5.8"

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.31", features = ["process", "signal", "fs", "user"] }
landlock = "0.4"
dns-lookup = "2"
keyring = { version = "3", features = ["sync-secret-service"] }

[target.'cfg(target_os = "macos")'.dependencies]
nix = { version = "0.31", features = ["process", "signal", "fs", "user"] }
keyring = { version = "3", features = ["apple-native"] }

[build-dependencies]
toml = "1.0"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
